--- a/http_src/views/private/clients/white-mode.scss
+++ b/http_src/views/private/clients/white-mode.scss
@@ -1616,3 +1616,8 @@ select:focus {
 .badge.bg-secondary:hover {
   background-color: #5a6268 !important;
 }
+
+.detail-value {
+    color: #212529;
+    font-weight: normal;
+}
